<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TelaDesafio">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/azul_escuro"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="20dp"
                app:srcCompat="@drawable/logo2" />

            <ImageView
                android:id="@+id/imageView13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="false"
                app:srcCompat="@drawable/linhas" />
        </LinearLayout>

    </LinearLayout>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                app:srcCompat="@drawable/banner_desafio" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/azul_escuro"
                android:gravity="center"
                android:padding="15dp"
                android:text="@string/txt_explica"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/imageView19"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:background="@color/azul_escuro"
                app:srcCompat="@drawable/linhas" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:gravity="center"
                android:text="@string/txt_exemplo"
                android:textColor="@color/azul_escuro"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:text="@string/txtPangramas"
                android:textColor="#F50057"
                android:textSize="16sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/txt_desafio"
                android:textColor="@color/cinza_padrao"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/txtTexto"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/borda_cinza"
                android:ems="10"
                android:gravity="start|top"
                android:hint="Digite o Texto..."
                android:inputType="textImeMultiLine"
                android:maxWidth="300dp"
                android:maxHeight="150dp"
                android:minHeight="150dp"
                android:padding="20dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnVerificar"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:text="@string/btn_verificar" />

                <Button
                    android:id="@+id/btnLimpar"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:text="@string/btn_limpar" />
            </LinearLayout>

            <Button
                android:id="@+id/btnVoltar"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="@color/cinza_padrao"
                android:text="@string/btn_voltar" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/azul_escuro"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            app:srcCompat="@drawable/rodape" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>