<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TelaMockups">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/azul_escuro"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="20dp"
                app:srcCompat="@drawable/logo2" />

            <ImageView
                android:id="@+id/imageView13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="false"
                app:srcCompat="@drawable/linhas" />
        </LinearLayout>

    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <LinearLayout
            android:id="@+id/layTudo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:shadowColor="#000000"
                android:shadowDx="1"
                android:shadowRadius="1"
                android:text="@string/txt_proxima_refeicao"
                android:textColor="@color/azul_padrao"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/txtHoras"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:gravity="center"
                android:shadowColor="#000000"
                android:shadowDy="2"
                android:shadowRadius="5"
                android:text="@string/txt_horas"
                android:textColor="@color/azul_padrao"
                android:textSize="60sp" />

            <HorizontalScrollView
                android:id="@+id/scrollImagem"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/imageView14"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="6dp"
                        android:layout_weight="1"
                        android:adjustViewBounds="true"
                        app:srcCompat="@drawable/prato1" />

                    <ImageView
                        android:id="@+id/imageView15"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="6dp"
                        android:layout_weight="1"
                        android:adjustViewBounds="true"
                        app:srcCompat="@drawable/prato2" />

                    <ImageView
                        android:id="@+id/imageView16"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="6dp"
                        android:layout_weight="1"
                        android:adjustViewBounds="true"
                        app:srcCompat="@drawable/prato3" />

                    <ImageView
                        android:id="@+id/imageView17"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="6dp"
                        android:layout_weight="1"
                        android:adjustViewBounds="true"
                        app:srcCompat="@drawable/prato4" />
                </LinearLayout>
            </HorizontalScrollView>

            <TextView
                android:id="@+id/txtSugestoes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:gravity="center"
                android:padding="2dp"
                android:text="@string/txt_sugestoes"
                android:textColor="@color/azul_escuro"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btnCardapio"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/azul_padrao"
                android:text="@string/btn_cardapio"
                android:textColor="@color/white" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnVoltar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/cinza_padrao"
                    android:text="@string/btn_voltar"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/btnPedido"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:text="@string/btn_pedido"
                    android:textColor="@color/white" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/azul_escuro"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/imageView18"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            app:srcCompat="@drawable/rodape" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>