<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TelaVideo">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/azul_escuro"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="20dp"
                app:srcCompat="@drawable/logo2" />

            <ImageView
                android:id="@+id/imageView13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="false"
                app:srcCompat="@drawable/linhas" />
        </LinearLayout>

    </LinearLayout>

    <!-- Conteudo aqui -->

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <LinearLayout
            android:id="@+id/layVideo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/titulo_video"
                android:textColor="@color/azul_escuro"
                android:textSize="20sp"
                android:textStyle="bold" />

            <!-- Comando que coloca o vídeo do YouTube no app -->
            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="15dp"
                android:text="@string/txt_agradecimento" />

            <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
                android:id="@+id/playVideo"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:padding="5dp"
                app:autoPlay="false"
                app:showFullScreenButton="true"
                app:videoId="9TtkTnvzAtw">

            </com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView>

            <Button
                android:id="@+id/btnVoltar"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="@color/cinza_padrao"
                android:text="@string/btn_voltar" />

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/azul_escuro"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/imageView18"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            app:srcCompat="@drawable/rodape" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>